# knievel

./: .dockerignore  .gitignore  API.md  ARCHITECTURE.md  AUTH.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  DOCUMENTATION_PLAN.md  Dockerfile  Dockerfile.publish  E2E.md  MIGRATION_RX.md  PARTMAN.md  PHASES.md  README.md  RELEASE_CHECKLIST.md  RELEASE_PLAYBOOK.md  REPORTING.md  REQUIREMENTS.md  SECURITY.md  TESTING.md  UI.md  build.rs  config.example.yaml  openapi.yaml  rust-toolchain.toml
.claude/agents/: knievel-resource-reviewer.md
.github/actions/node-setup/: action.yml
.github/actions/rust-setup/: action.yml
.github/ruby-client/: .openapi-generator-ignore  openapi-generator-config.json
.github/workflows/: ci.yml  main-image.yml  nightly.yml  release-ruby-gem.yml  release.yml
bench/: README.md
bench/macro/: loadgen.sh  seed.sh
bench/results/: SCHEMA.md  v0.1.json  v0.1.md
benches/: decision_handler.rs  dhat_decision.rs  hmac_verify.rs  iai_decision.rs  iai_hmac.rs  selection_pick.rs
benches/common/: mod.rs
charts/knievel/: .helmignore  Chart.yaml  README.md  values.yaml
charts/knievel/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
examples/compose/: README.md  compose.yaml  config.yaml  gem_smoke.rb  init.sql
migrations/: 0001_init.sql  0002_tenants.sql  0003_api_tokens.sql  0004_audit_log.sql  0005_idempotency_keys.sql  0006_demand.sql  0007_inventory.sql  0008_taxonomy.sql  0009_hmac_rotation.sql  0010_events_raw.sql  0011_events_rollup.sql  0012_ad_library.sql  0013_templated_creatives.sql  0014_creative_template_fk_restrict.sql  0014_flights_constraints.sql  0015_taxonomy_unique_names.sql
src/: ad_library.rs  admin_ui.rs  ads.rs  advertisers.rs  api_tags.rs  audit.rs  batch.rs  campaigns.rs  config.rs  creative_templates.rs  creatives.rs  db.rs  decisions.rs  etag.rs  event_endpoints.rs  events.rs  flights.rs  handlers.rs  hmac.rs  idempotency.rs  image_upload.rs  leader.rs  lib.rs  main.rs  migrate.rs  observability.rs  orgs.rs  pagination.rs  partitions.rs  request_log.rs  rollup.rs  selection.rs  server.rs  sites.rs  snapshot.rs  sql.rs  state.rs  system.rs  taxonomy.rs  tokens.rs  (+2 more)
src/auth/: jwt.rs  mod.rs  opaque.rs  principal.rs  role.rs  security.rs
src/cli/: admin.rs  mod.rs  seed_demo.rs
testlib/: Cargo.toml
testlib/src/: db.rs  lib.rs  tenant.rs
tests/: acceptance.rs  api_admin_handshake.rs  api_admin_ui.rs  api_ads.rs  api_advertisers.rs  api_batch.rs  api_cors.rs  api_creatives.rs  api_demand_chain.rs  api_flights.rs  api_inventory.rs  api_org_browser.rs  api_pagination.rs  api_placeholder.rs  api_projects.rs  api_taxonomy.rs  api_templated.rs  api_tokens.rs  chaos_aurora_failover.rs  chaos_db_writer_unreachable.rs  chaos_event_channel_saturation.rs  chaos_jwks_unreachable.rs  chaos_leader_watchdog_miss.rs  chaos_listen_drops.rs  chaos_minio_midflight.rs  chaos_notify_overflow.rs  chaos_pool_exhaustion.rs  cross_tenant_manifest.toml  integration_admin.rs  integration_audit_log.rs  integration_demand.rs  integration_foundation_helpers.rs  integration_migrations.rs  integration_oidc.rs  integration_seed_demo.rs  integration_tenants.rs
tests/chaos/: README.md
tests/fixtures/: integration_oidc_unrelated_key.der  keycloak-realm.json
web/admin/: .prettierignore  README.md  eslint.config.js  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.mjs  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/admin/scripts/: check-base-path.mjs
web/admin/src/: main.tsx
web/admin/src/api/: client.test.ts  client.ts  errors.test.ts  errors.ts  generated.ts
web/admin/src/auth/: AuthProvider.tsx  IdleWarning.tsx  PasteTokenLogin.a11y.test.tsx  PasteTokenLogin.tsx  RequireAuth.test.tsx  RequireAuth.tsx  roles.ts  runtimeConfig.test.ts  runtimeConfig.ts  session.test.ts  session.ts  userManager.ts  whoamiQuery.ts
web/admin/src/components/: CreativeImageUpload.tsx  DataTable.tsx  JsonDrawer.tsx  MintRevealModal.a11y.test.tsx  MintRevealModal.test.tsx  MintRevealModal.tsx  WorkspaceShell.tsx
web/admin/src/lib/: idempotency.ts
web/admin/src/routes/: __root.tsx  index.tsx  login.tsx  oidc.callback.tsx  oidc.login.tsx  oidc.logout.tsx  orgs.$org_id.library.tsx  orgs.$org_id.projects.$project_id.ads.tsx  orgs.$org_id.projects.$project_id.advertisers.new.tsx  orgs.$org_id.projects.$project_id.advertisers.tsx  orgs.$org_id.projects.$project_id.campaigns.tsx  orgs.$org_id.projects.$project_id.creatives.tsx  orgs.$org_id.projects.$project_id.flights.tsx  orgs.$org_id.projects.$project_id.reports.events.tsx  orgs.$org_id.projects.$project_id.reports.explain.tsx  orgs.$org_id.projects.$project_id.reports.test.tsx  orgs.$org_id.projects.$project_id.reports.tsx  orgs.$org_id.projects.$project_id.sites.tsx  orgs.$org_id.projects.$project_id.taxonomy.tsx  orgs.$org_id.projects.$project_id.templates.tsx  orgs.$org_id.projects.$project_id.tsx  orgs.$org_id.projects.$project_id.zones.tsx  orgs.$org_id.tsx
web/admin/src/test/: setup.ts  smoke.test.tsx
web/admin/tests/e2e/: smoke.spec.ts
web/marketing/: README.md  api.html  index.html  style.css
xtask/: Cargo.toml
xtask/src/: bench_all.rs  bench_env.rs  build_image.rs  check_api_doc.rs  check_cross_tenant.rs  check_doc_fences.rs  check_snake_case.rs  lint_migrations.rs  main.rs  openapi.rs  release_tag.rs  test_shape.rs  ui_client.rs
xtask/tests/fixtures/migrations/: 01_disable_rls.sql  02_no_force_rls.sql  03_table_without_rls.sql  04_policy_without_tenant.sql  05_table_outside_knievel.sql  06_clean_table.sql
