[workspace]
resolver = "2"
members = ["xtask", "testlib"]

[workspace.package]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/xrl/knievel"
homepage   = "https://github.com/xrl/knievel"
version    = "0.1.0"

# Shared dep versions live here so workspace members agree.
# Members opt in via `dep = { workspace = true }`. Per-task work
# adds entries as needed; PHASES.md tracks what landed when.
[workspace.dependencies]
anyhow      = "1"
argon2      = "0.5"
async-trait = "0.1"
base64      = "0.22"
hex         = "0.4"
hmac        = "0.12"
sha2        = "0.10"
thiserror   = "2"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
figment     = { version = "0.10", features = ["yaml", "env"] }
poem        = "3"
poem-openapi = { version = "5", features = ["swagger-ui"] }
rand        = "0.8"
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[package]
name        = "knievel"
description = "Fearlessly fast ad delivery that steals the show"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
version.workspace    = true

[dependencies]
anyhow       = { workspace = true }
argon2       = { workspace = true }
async-trait  = { workspace = true }
base64       = { workspace = true }
figment      = { workspace = true }
hex          = { workspace = true }
hmac         = { workspace = true }
poem         = { workspace = true }
poem-openapi = { workspace = true }
rand         = { workspace = true }
regex        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
sqlx         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
anyhow      = { workspace = true }
poem        = { workspace = true, features = ["test"] }
serde_json  = { workspace = true }
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
testlib     = { path = "testlib" }
tokio       = { workspace = true }
