[workspace]
resolver = "2"
members = ["xtask", "testlib"]

[workspace.package]
edition    = "2021"
license    = "MIT"
repository = "https://github.com/knievel-ads/knievel"
homepage   = "https://github.com/knievel-ads/knievel"
version    = "0.1.23"

# Shared dep versions live here so workspace members agree.
# Members opt in via `dep = { workspace = true }`. Per-task work
# adds entries as needed; PHASES.md tracks what landed when.
[workspace.dependencies]
anyhow      = "1"
argon2      = "0.5"
async-trait = "0.1"
base64      = "0.22"
hex         = "0.4"
hmac        = "0.12"
sha2        = "0.10"
thiserror   = "2"
regex       = "1"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
serde_yaml  = "0.9"
figment     = { version = "0.10", features = ["yaml", "env"] }
poem        = { version = "3", features = ["static-files"] }
poem-openapi = { version = "5", features = ["swagger-ui"] }
rand        = "0.8"
sqlx        = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
tokio       = { version = "1", features = ["full"] }
tracing     = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[package]
name        = "knievel"
description = "Fearlessly fast ad delivery that steals the show"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true
version.workspace    = true

[[bin]]
name = "knievel"
path = "src/main.rs"

[[bin]]
name = "knievel-cli"
path = "src/bin/knievel_cli.rs"

[dependencies]
anyhow       = { workspace = true }
argon2       = { workspace = true }
async-trait  = { workspace = true }
base64       = { workspace = true }
clap         = { version = "4", features = ["derive", "env"] }
figment      = { workspace = true }
hex          = { workspace = true }
hmac         = { workspace = true }
# Liquid templating engine — Phase 4.8 server-side ad rendering.
# DotLiquid-compatible per `API.md` § 3.6, matches Kevel's existing
# `Ad Template` semantics so RX-style migrations can lift their
# template source verbatim.
liquid       = "0.26"
poem         = { workspace = true }
poem-openapi = { workspace = true }
rand         = { workspace = true }
regex        = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
sha2         = { workspace = true }
sqlx         = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
criterion     = "0.5"
# Phase 5.9 — instruction-counting benches for hardware-independent
# normalization across releases. Valgrind dependency lives in the
# cloud-session runbook (`bench/README.md`), not CI.
iai-callgrind = "0.16"
# Phase 5.9 — heap profiler. Activated only via the `dhat-heap`
# feature so production builds and normal `cargo test` are
# unaffected.
dhat          = "0.3"
poem          = { workspace = true, features = ["test"] }
serde_json    = { workspace = true }
sqlx          = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"] }
testlib       = { path = "testlib" }
tokio         = { workspace = true }

# Phase 5.9 — opt-in heap profiling for `benches/dhat_decision.rs`.
# Disabled by default; the bench's `#[global_allocator]` swap is
# behind this gate so normal builds don't replace the system
# allocator.
[features]
dhat-heap = []

# Phase 5.7 — criterion micro-benchmarks for the hot inner loops.
# Phase 5.9 — extended end-to-end criterion + iai-callgrind +
# dhat heap-profile harness. Macro load tests against a running
# knievel are documented in `bench/README.md`; they are
# operator-run, not CI.
[[bench]]
name    = "selection_pick"
harness = false

[[bench]]
name    = "hmac_verify"
harness = false

[[bench]]
name    = "decision_handler"
harness = false

[[bench]]
name    = "iai_decision"
harness = false

[[bench]]
name    = "iai_hmac"
harness = false

[[bench]]
name    = "dhat_decision"
harness = false
