[package]
name        = "xtask"
description = "Repo-internal CLI: linters, codegen, drift checks"
edition.workspace    = true
license.workspace    = true
repository.workspace = true
version.workspace    = true
publish     = false

[dependencies]
anyhow     = { workspace = true }
clap       = { version = "4", features = ["derive"] }
knievel    = { path = ".." }
regex      = "1"
serde      = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
syn        = { version = "2", features = ["full"] }
toml       = "0.8"
walkdir    = "2"
